# SoftRendering

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  make-mingw32.bat  make-vs2022.bat
include/: all_define.h  camera.h  color.h  cpu_renderer.h  matrix.h  matrix4x4.h  shader.h  static_helper.h  vector.h  vector2.h  vector3.h
src/: camera.cpp  color.cpp  cpu_renderer.cpp  main.cpp  matrix4x4.cpp
src/glad/: glad.c
